--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Website :: zoxon.dev</title>
-</head>
-<body>
-  <h1>Hello world!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Velichko Konstantin - Personal Website</title>
+  </head>
+  <body>
+    <h1>Hello world!</h1>
+    <p>My name is Velichko Konstantin, and I am a <strong>frontend developer</strong>. I live in Bishkek, Kyrgyzstan, and work all over the world.</p>
+
+    <h2>Contacts</h2>
+    <ul>
+      <li>
+        Telegram:
+        <a href="//t.me/zoxon" target="_blank" rel="nofollow noopener">
+          @zoxon
+        </a>
+      </li>
+      <li>
+        Github:
+        <a href="//github.com/zoxon" target="_blank" rel="nofollow noopener">
+          @zoxon
+        </a>
+      </li>
+      <li>
+        Twitter:
+        <a href="//twitter.com/konsvel" target="_blank" rel="nofollow noopener">
+          @konsvel
+        </a>
+      </li>
+    </ul>
+  </body>
 </html>
